force-app/main/default/objects/Opportunity/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <description>Indica el monto aprobado luego de la evaluación crediticia de la oportunidad.</description>
    <inlineHelpText>Ingrese el monto aprobado para la oportunidad.</inlineHelpText>
    <label>Monto Aprobado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>