force-app/main/default/objects/Opportunity/fields/ATM_Withdrawal_Availability__c.field-meta.xml
<CustomField>
    <fullName>ATM_Withdrawal_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la tarjeta aprobada permite retiros en cajeros automáticos.</description>
    <inlineHelpText>Marque esta casilla si la tarjeta permite retiros en cajeros automáticos.</inlineHelpText>
    <label>Disponibilidad de Retiro en Cajero</label>
    <type>Checkbox</type>
</CustomField>