force-app/main/default/objects/Opportunity/fields/Contract_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Content_Document_Id__c</fullName>
    <description>Almacena el identificador del documento de Salesforce asociado al contrato generado.</description>
    <inlineHelpText>Guarda el identificador del documento contractual generado para la oportunidad.</inlineHelpText>
    <label>Id del Documento de Contrato</label>
    <length>18</length>
    <type>Text</type>
</CustomField>