force-app/main/default/objects/Opportunity/fields/Contract_Generated__c.field-meta.xml
<CustomField>
    <fullName>Contract_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el documento contractual de la oportunidad ya fue generado en el sistema.</description>
    <inlineHelpText>Marque esta casilla cuando el contrato de la oportunidad haya sido generado.</inlineHelpText>
    <label>Contrato Generado</label>
    <type>Checkbox</type>
</CustomField>