force-app/main/default/objects/Opportunity/fields/Contract_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Generation_Date__c</fullName>
    <description>Registra la fecha y hora en la que se generó el contrato de la oportunidad.</description>
    <inlineHelpText>Indica la fecha y hora en la que se generó el documento contractual.</inlineHelpText>
    <label>Fecha de Generación de Contrato</label>
    <type>DateTime</type>
</CustomField>