force-app/main/default/objects/Opportunity/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Representa la tasa de interés aplicada al producto financiero aprobado en la oportunidad.</description>
    <inlineHelpText>Ingrese la tasa de interés correspondiente al producto aprobado.</inlineHelpText>
    <label>Tasa de Interés</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>