force-app/main/default/objects/Opportunity/fields/Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la oportunidad ha sido aprobada por el analista en el proceso de aprobación.</description>
    <label>Aprobado</label>
    <type>Checkbox</type>
</CustomField>