force-app/main/default/objects/Opportunity/fields/Origin_Channel__c.field-meta.xml
<CustomField>
    <fullName>Origin_Channel__c</fullName>
    <description>Indica el canal por el cual se originó la oportunidad comercial.</description>
    <inlineHelpText>Seleccione el canal de origen de la oportunidad.</inlineHelpText>
    <label>Canal de Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Origin_Channel_Values</valueSetName>
    </valueSet>
</CustomField>