force-app/main/default/objects/Opportunity/fields/Payment_Day__c.field-meta.xml
<CustomField>
    <fullName>Payment_Day__c</fullName>
    <description>Indica el día del mes en que el cliente deberá realizar el pago de su tarjeta.</description>
    <inlineHelpText>Ingrese el día de pago asignado al cliente.</inlineHelpText>
    <label>Día de Pago</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>