force-app/main/default/objects/Opportunity/fields/Requested_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Requested_Credit_Limit__c</fullName>
    <description>Registra el monto de línea de crédito solicitado por el cliente durante el proceso comercial.</description>
    <inlineHelpText>Ingrese la línea de crédito solicitada para la oportunidad.</inlineHelpText>
    <label>Línea de Crédito Solicitada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>