force-app/main/default/objects/Opportunity/validationRules/PreventDirectContractCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventDirectContractCreation</fullName>
    <active>true</active>
    <description>Previene crear una oportunidad en algun stage diferente a inicio o evaluación.</description>
    <errorConditionFormula>AND(
  ISNEW(),
  OR(
    ISPICKVAL(StageName, &quot;Contrato&quot;),
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    ISPICKVAL(StageName, &quot;Closed Lost&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>No se puede crear una oportunidad directamente en la etapa de Contrato, Closed Won o Closed Lost.</errorMessage>
</ValidationRule>