force-app/main/default/objects/Opportunity/validationRules/RequireContractBeforeClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireContractBeforeClosedWon</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Closed Won&quot;),
  NOT(Contract_Generated__c)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Debe generar el contrato antes de marcar la oportunidad como Closed Won.</errorMessage>
</ValidationRule>