force-app/main/default/objects/Opportunity/validationRules/ValidateApprovalBeforeContract.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateApprovalBeforeContract</fullName>
    <active>true</active>
    <description>Valida que las oportunidades con línea de crédito mayor a 3000 pasen por el proceso de aprobación antes de avanzar a la etapa de Contrato.</description>
    <errorConditionFormula>AND(
  Requested_Credit_Limit__c &gt; 3000,
  ISPICKVAL(StageName, &quot;Contrato&quot;),
  NOT(Is_Approved__c)
)</errorConditionFormula>
    <errorMessage>Debe pasar por aprobación antes de avanzar a Contrato.</errorMessage>
</ValidationRule>